--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,11 +9,11 @@ on:
   schedule:
     - cron: '24 3 * * *'
   push:
-    branches: [ "code-cleanup" ]
+    branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "code-cleanup" ]
+    branches: [ "main" ]
   workflow_dispatch:
     inputs:
       version:
